<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_header_regional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/header_regional"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33" />

        <TextView
            android:id="@+id/tv_header_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/header_total"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_header_regional"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33" />

        <TextView
            android:id="@+id/tv_header_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/header_newly"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_header_total"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>